# NoteVis

./: .gitignore  CMakeLists.txt  CMakeSettings.json  NoteVis.vcxproj  NoteVis.vcxproj.filters  README.md  list_code_files.py  sourcelist.cmake
src/: CMakeLists.txt  Framework.cpp  Framework.h  Globals.h  main.cpp
src/Core/: Core.cpp  Core.h
src/Core/Action/: Action.cpp  Action.h  ActionDefines.h
src/Core/Action/Defines/: ActionDefineSystem.h  ActionDefines.cpp
src/Core/HistorySystem/: HistorySystem.cpp  HistorySystem.h
src/Core/MIDI/: MIDI.cpp  MIDI.h
src/Core/MIDI/MIDIFile/: MIDIFile.cpp  MIDIFile.h
src/Core/MIDI/MIDIPlayer/: MIDIPlayer.cpp  MIDIPlayer.h
src/Core/Menu/: Dialog.cpp  Dialog.h
src/Core/NVFileSystem/: NVFileSystem.cpp  NVFileSystem.h
src/Core/Note/: MusicTheoryDef.h  NoteColors.h  NoteTypes.h
src/Core/Note/NoteGraph/: NoteGraph.cpp  NoteGraph.h
src/Core/Note/NoteStorageCache/: NoteStorageCache.cpp  NoteStorageCache.h
src/Core/Render/: Renderer.cpp  Renderer.h
src/Core/Render/Draw/: Draw.cpp  Draw.h
src/Core/Render/NoteGraphRenderer/: NoteGraphRenderer.cpp  NoteGraphRenderer.h
src/Core/Types/: Color.h  Vec.h
src/Core/UI/: Dialog.cpp  Dialog.h  UI.cpp  UI.h
src/Core/UI/Dialog/: Dialog.cpp  Dialog.h
src/Core/UI/LogNotif/: LogNotif.cpp  LogNotif.h
src/Core/UI/MenuBar/: MenuBar.cpp  MenuBar.h
src/Core/UI/Widgets/: Widgets.cpp  Widgets.h
src/Render/: Renderer.cpp  Renderer.h
src/Render/Draw/: Draw.cpp  Draw.h
src/Render/NoteGraphRenderer/: NoteGraphRenderer.cpp  NoteGraphRenderer.h
src/Types/: ByteDataSteam.h  ByteDataStream.cpp  Color.h  StaticList.h  Vec.h
src/ZLibWrapper/: ZLibWrapper.cpp  ZLibWrapper.h
src/imgui/: imconfig.h  imgui.h  imgui_draw.cpp  imgui_impl_sdl.cpp  imgui_widgets.cpp
src/libremidi/: reader.cpp  writer.cpp
src/libremidi/detail/: alsa.hpp  coreaudio.hpp  dummy.hpp  emscripten.hpp  jack.hpp  midi_api.hpp  midi_queue.hpp  raw_alsa.hpp  winmm.hpp  winuwp.hpp
(+20 files in other folders)
